@@ -1005,6 +1005,13 @@ term_colours((prolog:message(_) --> _),
 				     ],
 			  classify
 			]).
+term_colours((prolog:error_message(_) --> _),
+	     expanded - [ expanded - [ expanded,
+				       expanded - [ identifier
+						  ]
+				     ],
+			  classify
+			]).
 
 %	XPCE rules
 
